actualizacion Kapis nuevo endpoint

--- a/src/app/pages/indicadores/indicadores.component.scss
+++ b/src/app/pages/indicadores/indicadores.component.scss
@@ -68,7 +68,7 @@
     height: 460px;
   }
   
-  ::ng-deep #chart {
+  ::ng-deep #charttest {
     position: absolute;
     top: 12px;
     right: 35px;
