--- a/src/app/pages/indicadores/indicadores.component.html
+++ b/src/app/pages/indicadores/indicadores.component.html
@@ -1085,87 +1085,8 @@
                 <dx-button icon="export" text="Exportar Todo" type="default" [width]="175" (onClick)="export()"></dx-button>
               </div>
             <br>
-
-            <!-- <div class="chart_environment">
-                <div id="custom_markup_container">
-                  <svg version="1.1" width="820px" height="420px">
-                    <path d="M 13 407 L 128 407 L 232 39 L 13 39" fill="#6D39C3"></path>
-                    <path
-                      d="M 46 381 L 161 381 L 265 13 L 46 13"
-                      opacity="0.5"
-                      fill="#6D39C3"
-                    ></path>
-                    <text
-                      transform="translate(30,89)"
-                      style="
-                        fill: #ffffff;
-                        font-family: 'Segoe UI', 'Helvetica Neue', 'Trebuchet MS', Verdana,
-                          sans-serif;
-                        font-size: 36px;
-                        font-weight: bold;
-                      "
-                    >
-                      <tspan x="0" y="0">Export</tspan>
-                      <tspan x="0" y="38">Custom</tspan>
-                      <tspan x="0" y="76">Markup</tspan>
-                    </text>
-                    <text
-                      transform="translate(32,199)"
-                      style="
-                        opacity: 0.8;
-                        fill: #ffffff;
-                        font-family: 'Segoe UI', 'Helvetica Neue', 'Trebuchet MS', Verdana,
-                          sans-serif;
-                        font-size: 14px;
-                      "
-                    >
-                      <tspan x="0" y="0">Export a chart with</tspan>
-                      <tspan x="0" y="19.2">custom elements</tspan>
-                    </text>
-                    <path
-                      opacity="0.8"
-                      d="M 0 0 L 820 0 L 820 420 L 0 420 L 0 0"
-                      stroke="#999999"
-                      stroke-width="1"
-                      stroke-linecap="butt"
-                      fill="none"
-                      stroke-linejoin="miter"
-                    ></path>
-                  </svg>
-                </div>
-                <dx-chart id="chart" #chartTest [dataSource]="oilProductionData" palette="Violet">
-                  <dxi-series valueField="year1990" name="1990"></dxi-series>
-                  <dxi-series valueField="year2000" name="2000"></dxi-series>
-                  <dxi-series valueField="year2010" name="2010"></dxi-series>
-                  <dxi-series valueField="year2016" name="2016"></dxi-series>
-                  <dxi-series valueField="year2017" name="2017"></dxi-series>
-                  <dxo-common-series-settings
-                    argumentField="state"
-                    type="bar"
-                    [barPadding]="0.3"
-                  >
-                  </dxo-common-series-settings>
-                  <dxo-legend verticalAlignment="bottom" horizontalAlignment="center">
-                  </dxo-legend>
-                  <dxo-title text="Oil Production">
-                    <dxo-subtitle text="(in millions tonnes)"></dxo-subtitle>
-                  </dxo-title>
-                </dx-chart>
-              </div> -->
-<!--               
-              <div class="controls-pane">
-                <dx-button
-                  icon="export"
-                  text="Export"
-                  type="default"
-                  [width]="145"
-                  (onClick)="export()"
-                >
-                </dx-button>
-              </div> -->
-              
-
-            <dx-box direction="col" width="100%" [height]="400">
+           
+            <dx-box direction="col" width="100%" [height]="400" id="custom_markup_container">
                 <dxi-item [ratio]="3" [baseSize]="0">
                   <dx-box direction="row" width="100%" [height]="125">
                     <dxi-item class="rect demo-dark" [ratio]="4">
@@ -1184,14 +1105,19 @@
                         </dx-chart>
                     </dxi-item>
                     <dxi-item class="rect demo-dark" [ratio]="1">
-                        <!-- <dl>
-                            <dt><b>Kms recorridos</b></dt>
-                            <dd>-127,625 kms nov vs dic 20123</dd>
-                            <dt><b>Caja seca</b></dt>
-                            <dd>-87,750 nov vs dic + 0 unidades nov vs oct</dd>
-                            <dt><b>Encortinados</b></dt>
-                            <dd>-5,418  nov vs dic + 0 unidades nov vs oct</dd>
-                          </dl> -->
+                        <ul>
+                            <li *ngFor="let value of kmsXUdnTotal">
+                                <strong>{{value.clasificacion}}</strong>                                
+                                <div>{{value.kmsDiferencia+" "+periodoVariacion}}</div>
+                            </li>
+                        </ul>
+                        <ul>
+                            <li *ngFor="let value of kmsXOperacionDescription">
+                                <strong>{{value.clasificacion}}</strong>                                
+                                <div>{{value.kmsDiferencia+" "+periodoVariacion}}</div>
+                                <div>{{value.udsDiferencia+" "+periodoVariacion}}</div>
+                            </li>
+                        </ul>
                     </dxi-item>
                   </dx-box>
                 </dxi-item>
@@ -1217,14 +1143,19 @@
                         </dx-chart>
                     </dxi-item>
                     <dxi-item class="rect demo-dark" [ratio]="1">
-                        <!-- <dl>
-                            <dt><b>Kms recorridos</b></dt>
-                            <dd>-127,625 kms nov vs dic 20123</dd>
-                            <dt><b>Caja seca</b></dt>
-                            <dd>-87,750 nov vs dic + 0 unidades nov vs oct</dd>
-                            <dt><b>Encortinados</b></dt>
-                            <dd>-5,418  nov vs dic + 0 unidades nov vs oct</dd>
-                          </dl> -->
+                        <ul>
+                            <li *ngFor="let value of kmsXUdnTotal">
+                                <strong>{{value.clasificacion}}</strong>                                
+                                <div>{{value.kmsDiferencia+" "+periodoVariacion}}</div>
+                            </li>
+                        </ul>
+                        <ul>
+                            <li *ngFor="let value of KmsXUdnDescription">
+                                <strong>{{value.clasificacion}}</strong>                                
+                                <div>{{value.kmsDiferencia+" "+periodoVariacion}}</div>
+                                <div>{{value.udsDiferencia+" "+periodoVariacion}}</div>
+                            </li>
+                        </ul>
                     </dxi-item>
                   </dx-box>
                 </dxi-item>
@@ -1250,14 +1181,12 @@
                         </dx-chart>
                     </dxi-item>
                     <dxi-item class="rect demo-dark" [ratio]="1">
-                        <!-- <dl>
-                            <dt><b>Kms recorridos</b></dt>
-                            <dd>-127,625 kms nov vs dic 20123</dd>
-                            <dt><b>Caja seca</b></dt>
-                            <dd>-87,750 nov vs dic + 0 unidades nov vs oct</dd>
-                            <dt><b>Encortinados</b></dt>
-                            <dd>-5,418  nov vs dic + 0 unidades nov vs oct</dd>
-                          </dl> -->
+                        <ul>
+                            <li *ngFor="let value of porXOperacionDescription">
+                                <strong>{{value.clasificacion}}</strong>                                
+                                <div>{{value.kmsDiferencia+"% "+periodoVariacion}}</div>
+                            </li>
+                        </ul>
                     </dxi-item>
                   </dx-box>
                 </dxi-item>
@@ -1283,14 +1212,12 @@
                         </dx-chart>
                     </dxi-item>
                     <dxi-item class="rect demo-dark" [ratio]="1">
-                        <!-- <dl>
-                            <dt><b>Kms recorridos</b></dt>
-                            <dd>-127,625 kms nov vs dic 20123</dd>
-                            <dt><b>Caja seca</b></dt>
-                            <dd>-87,750 nov vs dic + 0 unidades nov vs oct</dd>
-                            <dt><b>Encortinados</b></dt>
-                            <dd>-5,418  nov vs dic + 0 unidades nov vs oct</dd>
-                          </dl> -->
+                        <ul>
+                            <li *ngFor="let value of porXCargadosUdnDescription">
+                                <strong>{{value.clasificacion}}</strong>                                
+                                <div>{{value.kmsDiferencia+"% "+periodoVariacion}}</div>
+                            </li>
+                        </ul>
                     </dxi-item>
                   </dx-box>
                 </dxi-item>
@@ -1316,14 +1243,12 @@
                         </dx-chart>
                     </dxi-item>
                     <dxi-item class="rect demo-dark" [ratio]="1">
-                        <!-- <dl>
-                            <dt><b>Kms recorridos</b></dt>
-                            <dd>-127,625 kms nov vs dic 20123</dd>
-                            <dt><b>Caja seca</b></dt>
-                            <dd>-87,750 nov vs dic + 0 unidades nov vs oct</dd>
-                            <dt><b>Encortinados</b></dt>
-                            <dd>-5,418  nov vs dic + 0 unidades nov vs oct</dd>
-                          </dl> -->
+                        <ul>
+                            <li *ngFor="let value of porXFlotaOperacionDescription">
+                                <strong>{{value.clasificacion}}</strong>                                
+                                <div>{{value.udsDiferencia+" OPERADORES "+periodoVariacion}}</div>
+                            </li>
+                        </ul>
                     </dxi-item>
                   </dx-box>
                 </dxi-item>
@@ -1349,14 +1274,12 @@
                         </dx-chart>
                     </dxi-item>
                     <dxi-item class="rect demo-dark" [ratio]="1">
-                        <!-- <dl>
-                            <dt><b>Kms recorridos</b></dt>
-                            <dd>-127,625 kms nov vs dic 20123</dd>
-                            <dt><b>Caja seca</b></dt>
-                            <dd>-87,750 nov vs dic + 0 unidades nov vs oct</dd>
-                            <dt><b>Encortinados</b></dt>
-                            <dd>-5,418  nov vs dic + 0 unidades nov vs oct</dd>
-                          </dl> -->
+                        <ul>
+                            <li *ngFor="let value of porXFlotaUdnDescription">
+                                <strong>{{value.clasificacion}}</strong>                                
+                                <div>{{value.udsDiferencia+" OPERADORES "+periodoVariacion}}</div>
+                            </li>
+                        </ul>
                     </dxi-item>
                   </dx-box>
                 </dxi-item>
