--- a/src/app/pages/indicadores/indicadores.component.html
+++ b/src/app/pages/indicadores/indicadores.component.html
@@ -1108,14 +1108,15 @@
                         <ul>
                             <li *ngFor="let value of kmsXUdnTotal">
                                 <strong>{{value.clasificacion}}</strong>                                
-                                <div>{{value.kmsDiferencia+" "+periodoVariacion}}</div>
+                                <!-- [ngStyle]="{'color': (value.kmsDiferencia.toString().startsWith('-')) ? 'red' : ''}" -->
+                                <div [ngStyle]="{'color': (value.kmsDiferencia.toString().startsWith('-')) ? 'red' : ''}">{{value.kmsDiferencia+" "+periodoVariacion}}</div>
                             </li>
                         </ul>
                         <ul>
                             <li *ngFor="let value of kmsXOperacionDescription">
                                 <strong>{{value.clasificacion}}</strong>                                
-                                <div>{{value.kmsDiferencia+" "+periodoVariacion}}</div>
-                                <div>{{value.udsDiferencia+" "+periodoVariacion}}</div>
+                                <div [ngStyle]="{'color': (value.kmsDiferencia.toString().startsWith('-')) ? 'red' : ''}">{{value.kmsDiferencia+" "+periodoVariacion}}</div>
+                                <div [ngStyle]="{'color': (value.udsDiferencia.toString().startsWith('-')) ? 'red' : ''}">{{value.udsDiferencia+" "+periodoVariacion}}</div>
                             </li>
                         </ul>
                     </dxi-item>
@@ -1146,14 +1147,14 @@
                         <ul>
                             <li *ngFor="let value of kmsXUdnTotal">
                                 <strong>{{value.clasificacion}}</strong>                                
-                                <div>{{value.kmsDiferencia+" "+periodoVariacion}}</div>
+                                <div [ngStyle]="{'color': (value.kmsDiferencia.toString().startsWith('-')) ? 'red' : ''}">{{value.kmsDiferencia+" "+periodoVariacion}}</div>
                             </li>
                         </ul>
                         <ul>
                             <li *ngFor="let value of KmsXUdnDescription">
                                 <strong>{{value.clasificacion}}</strong>                                
-                                <div>{{value.kmsDiferencia+" "+periodoVariacion}}</div>
-                                <div>{{value.udsDiferencia+" "+periodoVariacion}}</div>
+                                <div [ngStyle]="{'color': (value.kmsDiferencia.toString().startsWith('-')) ? 'red' : ''}">{{value.kmsDiferencia+" "+periodoVariacion}}</div>
+                                <div [ngStyle]="{'color': (value.udsDiferencia.toString().startsWith('-')) ? 'red' : ''}">{{value.udsDiferencia+" "+periodoVariacion}}</div>
                             </li>
                         </ul>
                     </dxi-item>
@@ -1184,7 +1185,7 @@
                         <ul>
                             <li *ngFor="let value of porXOperacionDescription">
                                 <strong>{{value.clasificacion}}</strong>                                
-                                <div>{{value.kmsDiferencia+"% "+periodoVariacion}}</div>
+                                <div [ngStyle]="{'color': (value.kmsDiferencia.toString().startsWith('-')) ? 'red' : ''}">{{value.kmsDiferencia+"% "+periodoVariacion}}</div>
                             </li>
                         </ul>
                     </dxi-item>
@@ -1215,7 +1216,7 @@
                         <ul>
                             <li *ngFor="let value of porXCargadosUdnDescription">
                                 <strong>{{value.clasificacion}}</strong>                                
-                                <div>{{value.kmsDiferencia+"% "+periodoVariacion}}</div>
+                                <div [ngStyle]="{'color': (value.kmsDiferencia.toString().startsWith('-')) ? 'red' : ''}">{{value.kmsDiferencia+"% "+periodoVariacion}}</div>
                             </li>
                         </ul>
                     </dxi-item>
@@ -1246,7 +1247,7 @@
                         <ul>
                             <li *ngFor="let value of porXFlotaOperacionDescription">
                                 <strong>{{value.clasificacion}}</strong>                                
-                                <div>{{value.udsDiferencia+" OPERADORES "+periodoVariacion}}</div>
+                                <div [ngStyle]="{'color': (value.udsDiferencia.toString().startsWith('-')) ? 'red' : ''}">{{value.udsDiferencia+" OPERADORES "+periodoVariacion}}</div>
                             </li>
                         </ul>
                     </dxi-item>
@@ -1277,7 +1278,7 @@
                         <ul>
                             <li *ngFor="let value of porXFlotaUdnDescription">
                                 <strong>{{value.clasificacion}}</strong>                                
-                                <div>{{value.udsDiferencia+" OPERADORES "+periodoVariacion}}</div>
+                                <div [ngStyle]="{'color': (value.udsDiferencia.toString().startsWith('-')) ? 'red' : ''}">{{value.udsDiferencia+" OPERADORES "+periodoVariacion}}</div>
                             </li>
                         </ul>
                     </dxi-item>
