actualizacion disponibilidad columnas fijas

--- a/src/app/pages/disponibilidad/disponiblidad.component.html
+++ b/src/app/pages/disponibilidad/disponiblidad.component.html
@@ -70,8 +70,8 @@
                 <dxo-export [enabled]="true"></dxo-export>
 
                 <dxi-column dataField="tractoUdN" caption="" [fixed]="true" [groupIndex]="0"></dxi-column>
-                <dxi-column dataField="tractoOperacion" caption="Operación"></dxi-column>
-
+                <dxi-column dataField="tractoOperacion" caption="Operación" [fixed]="true"></dxi-column>
+                
                     <dxi-column caption="Disponibilidad Unidades">
                         <dxi-column dataField="presupuesto" caption="Presupuesto"></dxi-column>
                         <dxi-column dataField="totalUds" caption="Total Uds Asignadas"></dxi-column>
@@ -180,7 +180,7 @@
                 <dxo-export [enabled]="true"></dxo-export>
 
                 <dxi-column dataField="tractoUdN" caption="" [fixed]="true" [groupIndex]="0"></dxi-column>
-                <dxi-column dataField="tractoOperacion" caption="Operación"></dxi-column>
+                <dxi-column dataField="tractoOperacion" caption="Operación" [fixed]="true"></dxi-column>
                 <dxi-column dataField="totalUds" caption="Total Uds Asigandas"></dxi-column>
                 <dxi-column dataField="porTotalUds" caption="%" format="percent"></dxi-column>
                 <dxi-column dataField="disponibilidad" caption="Disponibles"></dxi-column>
@@ -239,7 +239,7 @@
                 <dxo-export [enabled]="true"></dxo-export>
 
                 <dxi-column dataField="tractoUdN" caption="" [fixed]="true" [groupIndex]="0"></dxi-column>
-                <dxi-column dataField="tractoOperacion" caption="Operación"></dxi-column>
+                <dxi-column dataField="tractoOperacion" caption="Operación" [fixed]="true"></dxi-column>
                 <dxi-column dataField="totalUds" caption="Total Uds Asigandas"></dxi-column>
                 <dxi-column dataField="porTotalUds" caption="%" format="percent"></dxi-column>
                 <dxi-column dataField="disponibilidad" caption="Disponibles"></dxi-column>
