--- a/src/app/pages/indicadores/indicadores.component.html
+++ b/src/app/pages/indicadores/indicadores.component.html
@@ -1112,14 +1112,14 @@
                                     <li *ngFor="let value of kmsXUdnTotal24">
                                         <strong>{{value.clasificacion}}</strong>                                
                                         <!-- [ngStyle]="{'color': (value.kmsDiferencia.toString().startsWith('-')) ? 'red' : ''}" -->
-                                        <div [ngStyle]="{'color': (value.kmsDiferencia.toString().startsWith('-')) ? 'red' : ''}">{{value.kmsDiferencia+" "+periodoVariacion}}</div>
+                                        <div [ngStyle]="{'color': (value.kmsDiferencia.toString().startsWith('-')) ? 'red' : ''}">{{value.kmsDiferencia+" ope. "+periodoVariacion}}</div>
                                     </li>
                                 </ul>
                                 <ul>
                                     <li *ngFor="let value of kmsXOperacionDescription24">
                                         <strong>{{value.clasificacion}}</strong>                                
                                         <div [ngStyle]="{'color': (value.kmsDiferencia.toString().startsWith('-')) ? 'red' : ''}">{{value.kmsDiferencia+" "+periodoVariacion}}</div>
-                                        <div [ngStyle]="{'color': (value.udsDiferencia.toString().startsWith('-')) ? 'red' : ''}">{{value.udsDiferencia+" "+periodoVariacion}}</div>
+                                        <div [ngStyle]="{'color': (value.udsDiferencia.toString().startsWith('-')) ? 'red' : ''}">{{value.udsDiferencia+" ope. "+periodoVariacion}}</div>
                                     </li>
                                 </ul>
                             </dxi-item>
@@ -1150,14 +1150,14 @@
                                 <ul>
                                     <li *ngFor="let value of kmsXUdnTotal24">
                                         <strong>{{value.clasificacion}}</strong>                                
-                                        <div [ngStyle]="{'color': (value.kmsDiferencia.toString().startsWith('-')) ? 'red' : ''}">{{value.kmsDiferencia+" "+periodoVariacion}}</div>
+                                        <div [ngStyle]="{'color': (value.kmsDiferencia.toString().startsWith('-')) ? 'red' : ''}">{{value.kmsDiferencia+" ope. "+periodoVariacion}}</div>
                                     </li>
                                 </ul>
                                 <ul>
                                     <li *ngFor="let value of KmsXUdnDescription24">
                                         <strong>{{value.clasificacion}}</strong>                                
                                         <div [ngStyle]="{'color': (value.kmsDiferencia.toString().startsWith('-')) ? 'red' : ''}">{{value.kmsDiferencia+" "+periodoVariacion}}</div>
-                                        <div [ngStyle]="{'color': (value.udsDiferencia.toString().startsWith('-')) ? 'red' : ''}">{{value.udsDiferencia+" "+periodoVariacion}}</div>
+                                        <div [ngStyle]="{'color': (value.udsDiferencia.toString().startsWith('-')) ? 'red' : ''}">{{value.udsDiferencia+" ope. "+periodoVariacion}}</div>
                                     </li>
                                 </ul>
                             </dxi-item>
