actualizacion disponiblidad unidades

--- a/src/app/pages/disponibilidad/disponiblidad.component.html
+++ b/src/app/pages/disponibilidad/disponiblidad.component.html
@@ -408,7 +408,9 @@
                             <dxi-column dataField="ordenMttoDias" caption="Dias Abierta"></dxi-column>
                         </dxi-column>
 
-
+                        <dxo-summary>
+                            <dxi-group-item column="tracto" summaryType="count"> </dxi-group-item>
+                        </dxo-summary>
 
                         <!-- <div *dxTemplate="let data of 'detalleCellTemplate'">
                             <dx-button icon="paste" stylingMode="outlined" type="danger" (onClick)="openDetalle(data)"></dx-button>
